--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blog-post",
   "version": "1.0.0",
-  "description": "blog api/json for hatchways",
+  "description": "blog api/json for blog example",
   "main": "blog.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ataranto320/Blog-Post#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "path": "^0.12.7"
   }
 }
